--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <ul>
+        <li>Deorren Erive</li>
+        <li>30</li>
+      </ul>
     </main>
 
     <footer>
