--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>I am starting now the CSS class</li>
         </ul>
       </section>
    
