--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <ul>
           <li>Enter your CSS notes here</li>
           <li>I am starting now the CSS class</li>
+          
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+          
         </ul>
       </section>
    
